added basic placeholder html

--- a/root/index.html
+++ b/root/index.html
@@ -1,6 +1,17 @@
 <html>
     <head>
+        <link href="/css/style.css" rel="stylesheet">
     </head>
     <body>
+        <div class="header">
+            <div>By MellowTortoise</div>
+        </div>
+        <div class="canvasContainer">
+            <canvas></canvas>
+        </div>
+        <div class="sidebar">
+        </div>
+
+        <script src="js/battlemapper.js"></script>
     </body>
 </html>
